Fix call to action contrast

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -481,6 +481,7 @@ h3 {
 .call-to-action .section-subtitle {
   margin-block-start: 2rem;
   text-transform: capitalize;
+  color: var(--bright-blue);
 }
 
 .call-to-action .section-title {
